# elastic-labs

./: .env  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
compose/apm-server/: Dockerfile  apm-server.yml
compose/elasticsearch/: Dockerfile
compose/filebeat/: Dockerfile  filebeat.yml
compose/kibana/: Dockerfile
compose/logstash/: Dockerfile  logstash.yml
compose/logstash/conf.d/: 01-nginx.conf
compose/logstash/pipeline/: logstash.conf
