[tool.poetry]
name = "elastic-labs"
version = "0.1.0"
description = ""
authors = ["twocucao <twocucao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "*"
elastic-apm = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
